fix: pagination overflow on mobile hotpatch

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -163,3 +163,8 @@ footer {
     border-radius: var(--tag-border-radius);
     font-family: var(--code-font-family);
 }
+
+/* .pagination overflow on mobile hotpatch */
+.pagination {
+    overflow: auto !important;
+}
